hphp/hack/test/typecheck/keyset/is_keyset_fail.php
<?hh

function f(mixed $k): keyset<string> {
  if (is_keyset($k)) {
    return $k;
  } else {
    return keyset[];
  }
}
